<resources>
    <string name="app_name">Inventory App</string>
    <string name="new_product_menu_item">New product</string>
    <string name="MainActivityTitle">Products</string>
    <string name="productQuantityDecButtonDescription">Product quantity decrementer button</string>
    <string name="productQuantityIncButtonDescription">Product quantity incrementer button</string>
    <string name="productDetailsSectionTitle">Product Details:</string>
    <string name="addProductImageButtonDescription">Add new product image button</string>
    <string name="productImageDescription">Product Image</string>
    <string name="productPriceTitle">Price:</string>
    <string name="productQuantityTitle">In stock:</string>
    <string name="productSupplierDetailsSectionTitle">Supplier Details:</string>
    <string name="productSupplierCallButtonDescription">Call Supplier Button</string>
    <string name="productSupplierNameTitle">Name:</string>
    <string name="productSupplierContactTitle">Contact:</string>
    <string name="emptyInventoryImageDescription">Empty Inventory Image</string>
    <string name="emptyInventoryText">You have empty inventory!\nLet\'s add new products…</string>
    <string name="errorFindingProductDetails">Can\'t find Product Details!</string>
    <string name="errorChangingProductQuantity">Couldn\'t change product quantity!</string>
    <string name="errorGettingImageFromGallery">Couldn\'t get image from gallery!</string>
    <string name="errorDeleteProduct">Couldn\'t Delete Product!</string>
    <string name="deleteConfirmingMsg">Delete this product completely?</string>
    <string name="deleteConfirmingYes">Delete</string>
    <string name="deleteConfirmingNo">Cancel</string>
    <string name="successDeleteProduct">Product Deleted Successfully</string>
    <string name="productNameEditTextHint">Product Name</string>
    <string name="productPriceEditTextHint">Product Price</string>
    <string name="productSupplierNameEditTextHint">Supplier Name</string>
    <string name="productSupplierContactEditTextHint">Supplier Contact</string>
    <string name="errorRequiredField">Required Field</string>
    <string name="errorRequiredPositiveField">Value Can\'t be Negative</string>
    <string name="errorInsertingProduct">Couldn\'t create new Product!</string>
    <string name="errorUpdatingProduct">Couldn\'t Edit Product!</string>
    <string name="successInsertingProduct">Product Created Successfully</string>
    <string name="successUpdatingProduct">Product Saved Successfully</string>
    <string name="giveUpConfirmingMsg">Close without saving the new product?</string>
    <string name="giveUpConfirmingYes">Yes, close</string>
    <string name="giveUpConfirmingNo">No, stay</string>
    <string name="productQuantityEditTextHint">In Stock Quantity</string>
    <string name="supplierNameEmptyCaseText">Supplier name not added yet!</string>
    <string name="supplierContactEmptyCaseText">Supplier contact info not added yet!</string>
</resources>
